--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+.navbar{
+    margin-bottom: 50px;
+}
+
 .prg{
     text-align: center;
     border: 1px solid #000;
@@ -12,15 +16,30 @@
     text-align: center;
     padding-top: 25px;
 }
+.prg-contact{
+    text-align: center;
+    font-style: italic;
+}
 .prg img{
     margin: 25px 0;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+}
+.title-contact{
+    text-align: center;
+    color: green;
+    margin-bottom: 25px;
 }
 
 .title{
     margin: 25px 0;
     color: green;
     text-align: center;
+}
+.form-contact{
+    border: 1px solid black;
+    margin: 50px 0;
+    padding: 25px;
+    border-radius: 8px;
 }
 
 .row{
